--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "stagiaire_ab3/php_devoir1_expert",
+    "name": "manue/php_devoir1_expert",
     "autoload": {
         "psr-4": {
             "App\\": "src/"
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "twig/twig": "^3.5",
-        "fakerphp/faker": "^1.21"
+        "fakerphp/faker": "^1.21",
+        "twig/twig": "^3.5"
     }
 }
